# zessionizer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
src/: lib.rs  main.rs
src/app/: actions.rs  handler.rs  mod.rs  modes.rs  state.rs
src/domain/: error.rs  mod.rs  project.rs
src/infrastructure/: mod.rs  paths.rs
src/observability/: file_writer.rs  init.rs  mod.rs  span_formatter.rs  tracer.rs
src/storage/: backend.rs  frecency.rs  json.rs  mod.rs  models.rs
src/ui/: helpers.rs  mod.rs  renderer.rs  theme.rs  viewmodel.rs
src/ui/components/: empty.rs  footer.rs  header.rs  mod.rs  search.rs  table.rs
src/worker/: handler.rs  messages.rs  mod.rs
themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml
