[package]
name = "zessionizer"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Omar Baranek <obaranek.dev@icloud.com>"]
description = "A Zellij plugin for managing project sessions with VIM-like keybindings, fuzzy search, and frecency-based ranking"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/obaranek/zessionizer"
repository = "https://github.com/obaranek/zessionizer"
documentation = "https://github.com/obaranek/zessionizer#readme"
keywords = ["zellij", "plugin", "terminal", "session-manager", "vim"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".git*",
    ".worktrees/",
    "target/",
    "scripts/",
]

[lib]
name = "zessionizer"
path = "src/lib.rs"

[[bin]]
name = "zessionizer"
path = "src/main.rs"

[dependencies]
thiserror = "2.0"
zellij-tile = "0.43.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
toml = "0.8"
fuzzy-matcher = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.27"
opentelemetry = "0.26"
opentelemetry_sdk = { version = "0.26", features = ["trace"] }
futures-util = "0.3"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
lto = true
opt-level = "z"
